--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/button": "2.0.26",
+    "@nextui-org/card": "^2.0.27",
+    "@nextui-org/checkbox": "^2.0.29",
     "@nextui-org/code": "2.0.24",
+    "@nextui-org/divider": "^2.0.27",
     "@nextui-org/input": "2.1.16",
     "@nextui-org/kbd": "2.0.25",
     "@nextui-org/link": "2.0.26",
+    "@nextui-org/listbox": "^2.1.19",
+    "@nextui-org/modal": "^2.0.33",
     "@nextui-org/navbar": "2.0.27",
     "@nextui-org/snippet": "2.0.30",
     "@nextui-org/switch": "2.0.25",
@@ -21,6 +26,7 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@remixicon/react": "^4.2.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -38,7 +44,6 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "^2.12.4",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
