--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,10 +16,11 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -a -m "Add changes"
+        # git commit -a -m "Add changes"
 
       - name: Push to MarcusYYDS/open-bmclapi-dashboard
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.TOKEN }}
           repository: marcusyyds/open-bmclapi-dashboard
+          force: true
