--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,11 +16,4 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-        # git commit -a -m "Add changes"
-
-      - name: Push to MarcusYYDS/open-bmclapi-dashboard
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.TOKEN }}
-          repository: MarcusYYDS/OpenBMCLAPI-Dashboard
-          force: true
+          git push --force --quiet "https://MarcusYYDS:${{ secrets.TOKEN }}@github.com/MarcusYYDS/open-bmclapi-dashboard.git" main:main
