--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Commit files
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "marcus@marcus233.top"
+          git config --local user.name "MarcusYYDS"
           git push --force --quiet "https://MarcusYYDS:${{ secrets.TOKEN }}@github.com/MarcusYYDS/OpenBMCLAPI-Dashboard.git" main:main
